# MCM-DPO

./: README.md  cider.py  get_score.py  mcmdpo_inference.py  pyproject.toml
data/pinterest/: pinterest_test.json  pinterest_train.json
data/twitter/: twitter_test.json  twitter_train.json
llava/model/: llava_arch.py
llava/model/language_model/: llava_llama.py
llava/model/multimodal_encoder/: clip_encoder.py
llava/train/: diff_lib.py  llava_trainer.py  train.py
scripts/: dpo.sh  mcmdpo.sh  sft.sh
