[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcmdpo"
version = "1.0"
description = "MCM-DPO: Multifaceted Cross-Modal Direct Preference Optimization for Alter-text Generation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.3.0", "torchvision",
    "transformers==4.41.2", "tokenizers==0.19.1", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.30.1", "peft==0.12.0", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.5.0",
    "gradio==4.16.0", "gradio_client==0.8.1",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
    "deepspeed==0.14.4", "datasets", "flash-attn==2.5.9.post1", 
    "protobuf==4.24.3", "wandb==0.16.6", 
]

[project.urls]
"Homepage" = "https://github.com/LVUGAI/MCM-DPO.git"
"Bug Tracker" = "https://github.com/LVUGAI/MCM-DPO/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
